# hf-app-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py  router.py  routers.py
app/api/endpoints/: EMB.py  KEY.py  NER.py  QA.py  SENT.py  SUM.py  ZSC.py  health.py
app/config/: config.py  event_handlers.py  security.py
app/core/: config.py  event_handlers.py  security.py
app/engine/: base.py  models.py  payload.py  result.py
app/engine/instances/: EMB.py  KEY.py  NER.py  QA.py  SENT.py  SUM.py  ZSC.py
app/models/: KEY.py  NER.py  QA.py  SUM.py  base.py  model.py  payload.py  result.py
app/models/instances/: SUM.py  ZSC.py
app/routers/: router.py
app/services/: hf.py  utils.py
tests/: multi_pipe.py  multi_reqs.py  multi_span.py  ray_test.py  req_test.py  zephyr.py
tests/ray/: ray_batch.py  run_ray_batch.py
