[tool.poetry]
name = "hf-app-fastapi"
version = "0.1.0"
description = ""
authors = ["Matteo Prandi <matteo.prandi@live.it>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
transformers = {extras = ["torch"], version = "^4.35.0"}
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"

[tool.poetry.scripts]
start = "app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
