[tool.poetry]
name = "hf-app-fastapi"
version = "0.1.0"
description = ""
authors = ["Matteo Prandi <matteo.prandi@live.it>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
transformers = {extras = ["torch"], version = "^4.35.0"}
pydantic = "^1.10.8"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
span-marker = "^1.5.0"
ray = {extras = ["serve"], version = "^2.8.0"}

[tool.poetry.scripts]
start = "app.main:start"

[tool.poetry.group.dev.dependencies]
httpx = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
